# GATEROOT

./: .gitignore  NOTICE.txt  README.md  SUPPORT.md  environment.yml  justfile
.devcontainer/: Dockerfile  devcontainer.bashrc  devcontainer.json
.dvc/: config
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  main.cpp
data/: .gitignore  download-data.sh
data/root/: .gitignore  Bin_ETSIPETscanner_INIT  Bin_ETSIPETscanner_INIT.c  Bin_ETSIPETscanner_INITtest  ETSIPETscanner256mmAFOV_geometry.json  ETSIPETscanner_geometry.json  ETSIPETscanner_mIEC_1.root.dvc  ETSIPETscanner_mIEC_10.root.dvc  ETSIPETscanner_mIEC_11.root.dvc  ETSIPETscanner_mIEC_12.root.dvc  ETSIPETscanner_mIEC_13.root.dvc  ETSIPETscanner_mIEC_14.root.dvc  ETSIPETscanner_mIEC_15.root.dvc  ETSIPETscanner_mIEC_16.root.dvc  ETSIPETscanner_mIEC_17.root.dvc  ETSIPETscanner_mIEC_18.root.dvc  ETSIPETscanner_mIEC_19.root.dvc  ETSIPETscanner_mIEC_2.root.dvc  ETSIPETscanner_mIEC_20.root.dvc  ETSIPETscanner_mIEC_21.root.dvc  ETSIPETscanner_mIEC_22.root.dvc  ETSIPETscanner_mIEC_23.root.dvc  ETSIPETscanner_mIEC_24.root.dvc  ETSIPETscanner_mIEC_25.root.dvc  ETSIPETscanner_mIEC_26.root.dvc  ETSIPETscanner_mIEC_27.root.dvc  ETSIPETscanner_mIEC_28.root.dvc  ETSIPETscanner_mIEC_29.root.dvc  ETSIPETscanner_mIEC_3.root.dvc  ETSIPETscanner_mIEC_30.root.dvc  ETSIPETscanner_mIEC_31.root.dvc  ETSIPETscanner_mIEC_32.root.dvc  ETSIPETscanner_mIEC_33.root.dvc  ETSIPETscanner_mIEC_34.root.dvc  ETSIPETscanner_mIEC_35.root.dvc  ETSIPETscanner_mIEC_36.root.dvc  ETSIPETscanner_mIEC_4.root.dvc  ETSIPETscanner_mIEC_5.root.dvc  ETSIPETscanner_mIEC_6.root.dvc  ETSIPETscanner_mIEC_7.root.dvc  (+4 more)
